--- a/index.html
+++ b/index.html
@@ -224,9 +224,14 @@
 				</div>
 		</section>
 	</div>
-	<!--/ About-->
+	<!--// About-->
 
-	<!-- news -->
+    <!-- news -->
+    
+
+    <!-- // news -->
+
+	<!-- media -->
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -266,7 +271,7 @@
   </a>
 </div>
 	
-	<!-- / news-->
+	<!-- // media-->
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
