--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 	<link rel="stylesheet" href="./css/styles.css">
 
+    <link rel="stylesheet" href="./js/main.js">
+
 	<!--Nav-->
 	<div class="callout header">
 		<div class="opaque-overlay">&nbsp;</div>
-		<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+		<nav class="navbar bg-dark navbar-expand-lg navbar-dark fixed-top">
 			<div class="container">
 				<a class="navbar-brand" href="#">DailyDriverss</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,10 +32,10 @@
 							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">About</a>
+							<a class="nav-link" href="#what-we-do">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Reviews</a>
+							<a class="nav-link" href="#reviews">Reviews</a>
 						</li>
 
 						<li class="nav-item">
@@ -41,7 +43,7 @@
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link" href="#">Media</a>
+							<a class="nav-link" href="#media">Media</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Contact</a>
@@ -201,6 +203,7 @@
 	<!-- Closing Reviews-->
 
 	<!--About-->
+
 	<div class="about-bg">
 		<section id="the-best">
 			<div class="flex container">
@@ -208,7 +211,7 @@
 					<img src="./images/thebest.jpeg" alt="Property 1" />
             </div>
 					<div>
-						<h2 class="heading-green">The Best Daily Drives</h2>
+						<h2 class="heading-blue">The Best Daily Drives</h2>
 						<p class="large-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						<p>Est qui eos quasi ratione nostrum excepturi id recusandae fugit omnis ullam pariatur itaque
 							nisi voluptas impedit Quo suscipit omnis iste velit maxime.</p>
@@ -232,6 +235,7 @@
     <!-- // news -->
 
 	<!-- media -->
+    <section id="media">
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -240,7 +244,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./images/gti.jpeg" class="d-block w-100" alt="...">
+      <img src="./images/turbos.jpeg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
@@ -254,7 +258,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./images/main2.jpeg" class="d-block w-100" alt="...">
+      <img src="./images/m2.jpeg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -270,13 +274,27 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-	
+	</section>
 	<!-- // media-->
+
+<!--Contact-->
+
+
+<!-- // Contact-->
+    
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <!--Change color on scroll-->
+     <script>
+     $(window).scroll(function(){
+         $('nav').toggleClass('scrolled', $ (this).scrollTop() > 760);
+     });
+     </script>
+
 	</body>
 
 </html>
