--- a/index.html
+++ b/index.html
@@ -135,24 +135,24 @@
 						<div class="row">
 							<div class="col-12 col-md-6 col-lg-4 text-center">
 								<figure class="figure">
-									<img src="./images/amggtr3.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-									<figcaption class="figure-caption text-light">AMG GTR brabus edition</figcaption>
+									<img src="./images/focus.jpeg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+									<figcaption class="figure-caption text-light">Ford Focus Rs</figcaption>
 									<button class=" section2_btn btn55">Show review</button>
 								</figure>
 							</div>
 
 							<div class="col-12 col-md-6 col-lg-4 text-center">
 								<figure class="figure">
-									<img src="./images/gt3rs1.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-									<figcaption class="figure-caption text-light">Porshe GT3RS</figcaption>
+									<img src="./images/defender.jpeg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+									<figcaption class="figure-caption text-light">Defender</figcaption>
 									<button class="section2_btn btn55">Show review</button>
 								</figure>
 							</div>
 
 							<div class="col-12 col-md-6 col-lg-4 text-center">
 								<figure class="figure">
-									<img src="./images/720s2.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-									<figcaption class="figure-caption text-light">Mclaren 720s</figcaption>
+									<img src="./images/audirs31.jpeg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+									<figcaption class="figure-caption text-light">Audi rs3</figcaption>
 									<button class="section2_btn btn55">Show review</button>
 								</figure>
 							</div>
@@ -166,14 +166,14 @@
 							</div>
 							<div class="col-12 col-md-6 col-lg-4 text-center">
 								<figure class="figure">
-									<img src="./images/ford1.jpeg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+									<img src="./images/mustanggt.jpeg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 									<figcaption class="figure-caption text-light">Ford Mustang</figcaption>
 									<button class="section2_btn btn55">Show review</button>
 								</figure>
 							</div>
 							<div class="col-12 col-md-6 col-lg-4 text-center">
 								<figure class="figure">
-									<img src="./images/audirs31.jpeg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+									<img src="./images/golfr.jpeg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 									<figcaption class="figure-caption text-light">Audi Rs3</figcaption>
 									<button class="section2_btn btn55">Show review</button>
 								</figure>
@@ -196,6 +196,7 @@
 				<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
 				<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
@@ -208,6 +209,10 @@
 				</div>
 				<div class="carousel-item">
 					<img src="./images/gti.jpeg" class="d-block w-100 img-fluid" alt="...">
+					
+				</div>
+                <div class="carousel-item">
+					<img src="./images/alloy-asphalt-auto-automobile-241316.jpg" class="d-block w-100 img-fluid" alt="...">
 					
 				</div>
 			</div>
