--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							<div class="col-12 col-md-6 col-lg-4 text-center">
 								<figure class="figure">
 									<img src="./images/golfr.jpeg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-									<figcaption class="figure-caption text-light">Audi Rs3</figcaption>
+									<figcaption class="figure-caption text-light">Golf R</figcaption>
 									<button class="section2_btn btn55">Show review</button>
 								</figure>
 							</div>
@@ -231,7 +231,7 @@
 
 	<div class="review-bg ">
 
-		<section class="blog-me pt-100 pb-100" id="blog">
+		<section class="blog-me pt-50 pb-50" id="blog">
          <div class="container-fluid">
             <div class="row">
                <div class="col-xl-6 mx-auto text-center">
@@ -241,7 +241,7 @@
                </div>
             </div>
             <div class="row text-light">
-               <div class="col-lg-4 col-md-6">
+               <div class="col-lg-4 col-md-6" style="padding-bottom:30px;">
                   <!-- Single Blog -->
                   <div class="single-blog">
                      <div class="blog-img">
@@ -265,7 +265,7 @@
                   </div>
                </div>
 
-               <div class="col-lg-4 col-md-6">
+               <div class="col-lg-4 col-md-6" style="padding-bottom:30px;" >
                   <!-- Single Blog -->
                   <div class="single-blog">
                      <div class="blog-img">
@@ -288,7 +288,7 @@
                      </div>
                   </div>
                </div>
-               <div class="col-lg-4 col-md-6">
+               <div class="col-lg-4 col-md-6" >
                   <!-- Single Blog -->
                   <div class="single-blog">
                      <div class="blog-img">
