changing contact section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 		type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
+		integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 	<link rel="stylesheet" href="./css/styles.css">
 
 	<link rel="stylesheet" href="./js/main.js">
@@ -320,81 +322,18 @@
 
 	<!-- // news -->
 
-
+<!--Contact-->
 
 	
+   
+	<!--// Contact-->
 
-	<!--Contact-->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
-		integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-
-	<div class="row" id="contact">
-		<div class="container mt-5">
-
-			<div class="row" style="height:550px;">
-				<div class="col-md-6 maps">
-					<iframe
-						src="https://maps.google.com/maps?hl=en&amp;q=Carrigane%2C%20Carrigtwohill+(Dailydriverss)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed"
-						frameborder="0" style="border:0" allowfullscreen></iframe>
-				</div>
-
-				<div class="col-md-6" style="padding: 40px;">
-					<h2 class="text-uppercase mt-3 font-weight-bold text-white">Contact Us</h2>
-					<form>
-						<div class="row">
-							<div class="col-lg-6">
-								<div class="form-group">
-									<input type="text" class="form-control mt-2" placeholder="First Name" required>
-              </div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<input type="text" class="form-control mt-2" placeholder="Last Name" required>
-              </div>
-									</div>
-									<div class="col-lg-6">
-										<div class="form-group">
-											<input type="email" class="form-control mt-2" placeholder="Email" required>
-              </div>
-										</div>
-										<div class="col-lg-6">
-											<div class="form-group">
-												<input type="number" class="form-control mt-2" placeholder="Number" required>
-              </div>
-											</div>
-											<div class="col-12">
-												<div class="form-group">
-													<textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Type your message here" rows="3" required></textarea>
-												</div>
-											</div>
-
-											<div class="col-12">
-												<button class="btn-rounded" type="submit">Send</button>
-											</div>
-										</div>
-					</form>
-					<div class="text-white">
-						<h2 class="text-uppercase mt-4 font-weight-bold">DailyDriverss</h2>
-
-						<i class="fas fa-phone mt-3"></i> <a href="tel:+">(+39) 123456</a><br>
-
-						<i class="fa fa-envelope mt-3"></i> <a href="">lg.develop1@gmail.com</a><br>
-						<i class="fas fa-globe mt-3"></i> Carrigane Rd , Cork<br>
-
-						<div class="my-4">
-							<a href=""><i class="fab fa-facebook fa-3x pr-4"></i></a>
-							<a href=""><i class="fab fa-instagram fa-3x"></i></a>
-
-						</div>
-					</div>
-				</div>
-
+    <!-- Copyright -->
+			<div class="footer-copyright text-center ">© 2020 Copyright:
+				<a target="_blank" href="#"> Liam Gosnell</a>
 			</div>
-		</div>
-	</div>
+			<!-- /Copyright -->
 
-
-	<!-- // Contact-->
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
