--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
               <i class="fas fa-paper-plane" aria-hidden="true"></i> Submit
           </button>
           <div class="social mt-3">
-          <a href="#">
+          <a href="https://www.facebook.com/">
           <i class="fab fa-facebook-square fa-3x"></i>
           </a>
-          <a href="#">
+          <a href="https://www.instagram.com/dailydriverss/?hl=en">
           <i class="fab fa-instagram fa-3x"></i>
           </a>
           </div>
