cleaning up css

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 						</a>
 					</div>
 </div>
-				</div>
+			
 				<!-- // media-->
 
 
@@ -341,16 +341,16 @@
 								<h4 class="text-white mb-4"><strong>Get in Touch</strong></h4>
 								<form>
 									<div class="form-group">
-										<input type="text" class="form-control" name="" value="" placeholder="Name">
+										<input type="text" class="form-control" name="name" value="" placeholder="Name">
                                     </div>
 										<div class="form-group">
-											<input type="email" class="form-control" name="" value="" placeholder="E-mail">
+											<input type="email" class="form-control" name="email" value="" placeholder="E-mail">
                                         </div>
 											<div class="form-group">
-												<input type="tel" class="form-control" name="" value="" placeholder="Phone">
+												<input type="tel" class="form-control" name="phone" value="" placeholder="Phone">
                                             </div>
 												<div class="form-group">
-													<textarea class="form-control" name="" rows="3" placeholder="Message"></textarea>
+													<textarea class="form-control" name="message" rows="3" placeholder="Message"></textarea>
 												</div>
 												<button class="btn btn-secondary" type="submit" name="button">
               <i class="fas fa-paper-plane" aria-hidden="true"></i> Submit
