--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
 	</div>
 
-
 	<!--Closing Nav-->
+
 	<!--Features -->
 	<section id="what-we-do">
 		<div class="container-fluid ">
@@ -259,7 +259,7 @@
 													</ul>
 												</div>
 											</div>
-											<p>What happens to the old Adui RS6 since the release of the newest model?
+											<p>What happens to the old Audi RS6 since the release of the newest model?
 											</p>
 											<a href="#" class="box_btn">read more</a>
 										</div>
