adding photos for the top reviews on home page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 	<!--Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent shadow fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">DailyDriverss</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,8 +64,8 @@
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <div class="col-12 text-center">
-        <h1 class="font-weight-light">Vertically Centered Masthead Content</h1>
-        <p class="lead">A great starter layout for a landing page</p>
+        <h1 class="font-weight-light text-light">All About the Drive.</h1>
+        
       </div>
     </div>
   </div>
@@ -121,6 +121,7 @@
 	<!-- features-->
 
 	<!-- Reviews-->
+    <section class="reviews">
 	<div class="container">
 
   
@@ -131,10 +132,10 @@
   <div class="row">
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <a href="#"><img class="card-img-top" src="./images/mustang-1.jpeg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project One</a>
+            <a href="#">Ford Mustang GT</a>
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
@@ -142,10 +143,10 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <a href="#"><img class="card-img-top" src="./images/focus-white.jpeg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project Two</a>
+            <a href="#">Ford Focus RS</a>
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
         </div>
@@ -153,10 +154,10 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <a href="#"><img class="card-img-top" src="./images/golr-r.jpeg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project Three</a>
+            <a href="#">Volkswagen Golf R</a>
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
@@ -164,10 +165,10 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <a href="#"><img class="card-img-top" src="./images/rs3-blue.jpeg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project Four</a>
+            <a href="#">Audi RS3</a>
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
         </div>
@@ -175,10 +176,10 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <a href="#"><img class="card-img-top" src="./images/m4.jpeg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project Five</a>
+            <a href="#">BMW M4</a>
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
@@ -186,16 +187,17 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <a href="#"><img class="card-img-top" src="./images/tesla.jpeg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project Six</a>
+            <a href="#">Tesla Model 3</a>
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
         </div>
       </div>
     </div>
   </div>
+  </section>
 	<!-- Closing Reviews-->
 
 
