--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 	<div class="single">
 		<h2>Subscribe to our Newsletter</h2>
 	<div class="input-group">
-         <input type="email" class="form-control" placeholder="Enter your email">
+         <input type="email" class="form-control bg-light" placeholder="Enter your email">
          <span class="input-group-btn">
          <button class="btn btn-theme" type="submit">Subscribe</button>
          </span>
@@ -222,7 +222,64 @@
             
 				<!-- // Subscribe list-->
 
-                <!-- Footer -->
+                
+                 <!-- Footer -->
+  <footer class="bg-white">
+    <div class="container py-5">
+      <div class="row py-4">
+        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
+          <p class="font-italic text-muted text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+          <ul class="list-inline mt-4">
+            <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i class="fab fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i class="fab fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i class="fab fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i class="fab fa-pinterest"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fab fa-vimeo"></i></a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+          <h6 class="text-uppercase font-weight-bold mb-4 text-dark">Shop</h6>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-2"><a href="#" class="text-muted text-dark">For Women</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-dark">For Men</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-dark">Stores</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-dark">Our Blog</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+          <h6 class="text-uppercase font-weight-bold mb-4 text-dark">Company</h6>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-2"><a href="#" class="text-muted text-dark">Login</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-dark">Register</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-dark">Wishlist</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-dark">Our Products</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-lg-0">
+          <h6 class="text-uppercase font-weight-bold mb-4 text-dark">Newsletter</h6>
+          <p class="text-muted mb-4 text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>
+          <div class="p-1 rounded border">
+            <div class="input-group">
+              <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">
+              <div class="input-group-append">
+                <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Copyrights -->
+    <div class="bg-light py-4">
+      <div class="container text-center">
+        <p class="text-muted mb-0 py-2 text-light">© 2019 Bootstrapious All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+  <!-- End -->
+
+
 	
 	<!-- ./Footer -->
 
